--- a/notritionVendorsAPP/View/DetailFood.storyboard
+++ b/notritionVendorsAPP/View/DetailFood.storyboard
@@ -274,16 +274,68 @@
         <scene sceneID="3kv-Wv-tMy">
             <objects>
                 <viewController id="gCj-2e-Pez" customClass="ViewLocationShopController" customModule="notritionVendorsAPP" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="PVy-rs-5sE">
+                    <view key="view" contentMode="scaleToFill" id="MsX-gn-kiQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="PTJ-ib-vK4"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AH1-fr-XuM" customClass="GMSMapView">
+                                <rect key="frame" x="0.0" y="88" width="375" height="690"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="G3t-gA-d9D">
+                                <rect key="frame" x="0.0" y="778" width="375" height="0.0"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shop Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5jo-KZ-rmm">
+                                        <rect key="frame" x="20" y="20" width="335" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qjm-hq-8yu">
+                                        <rect key="frame" x="144.66666666666666" y="61" width="86" height="36"/>
+                                        <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                        <state key="normal" title="Direction">
+                                            <color key="titleColor" red="0.33103787899999998" green="0.64064604039999995" blue="0.80741077660000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="getDirectionPressed:" destination="gCj-2e-Pez" eventType="touchUpInside" id="tuK-tJ-2sC"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="qjm-hq-8yu" firstAttribute="top" secondItem="5jo-KZ-rmm" secondAttribute="bottom" constant="20" id="1dS-iA-lRy"/>
+                                    <constraint firstAttribute="trailing" secondItem="5jo-KZ-rmm" secondAttribute="trailing" constant="20" id="4kx-H4-Lqe"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" id="BbS-ag-Pth"/>
+                                    <constraint firstItem="qjm-hq-8yu" firstAttribute="centerX" secondItem="G3t-gA-d9D" secondAttribute="centerX" id="K8i-XS-nzO"/>
+                                    <constraint firstItem="5jo-KZ-rmm" firstAttribute="top" secondItem="G3t-gA-d9D" secondAttribute="top" constant="20" id="RgJ-YT-J9G"/>
+                                    <constraint firstItem="5jo-KZ-rmm" firstAttribute="leading" secondItem="G3t-gA-d9D" secondAttribute="leading" constant="20" id="qcc-nO-6KS"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="G3t-gA-d9D" firstAttribute="trailing" secondItem="VTg-mc-kUB" secondAttribute="trailing" id="EGo-PC-VOg"/>
+                            <constraint firstItem="AH1-fr-XuM" firstAttribute="top" secondItem="VTg-mc-kUB" secondAttribute="top" id="KMx-MN-kqs"/>
+                            <constraint firstItem="G3t-gA-d9D" firstAttribute="leading" secondItem="VTg-mc-kUB" secondAttribute="leading" id="QY8-Lr-ESj"/>
+                            <constraint firstItem="VTg-mc-kUB" firstAttribute="bottom" secondItem="G3t-gA-d9D" secondAttribute="bottom" id="UnD-xG-C7W"/>
+                            <constraint firstItem="VTg-mc-kUB" firstAttribute="trailing" secondItem="AH1-fr-XuM" secondAttribute="trailing" id="dbE-ME-WfS"/>
+                            <constraint firstItem="VTg-mc-kUB" firstAttribute="bottom" secondItem="AH1-fr-XuM" secondAttribute="bottom" id="etm-mv-Csw"/>
+                            <constraint firstItem="AH1-fr-XuM" firstAttribute="leading" secondItem="VTg-mc-kUB" secondAttribute="leading" id="vzT-bF-Sfj"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="VTg-mc-kUB"/>
                     </view>
+                    <connections>
+                        <outlet property="direction" destination="qjm-hq-8yu" id="EIs-jo-CGz"/>
+                        <outlet property="mapView" destination="AH1-fr-XuM" id="VOV-tg-2U0"/>
+                        <outlet property="shopInforHeightConstraint" destination="BbS-ag-Pth" id="DZE-EJ-QHy"/>
+                        <outlet property="shopName" destination="5jo-KZ-rmm" id="HNx-7x-bnz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="akV-dY-dbj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1903" y="983"/>
+            <point key="canvasLocation" x="1901.5999999999999" y="982.75862068965523"/>
         </scene>
         <!--Detail Photo Controller-->
         <scene sceneID="RI5-Q2-LRt">
