--- a/notritionVendorsAPP/View/DetailFood.storyboard
+++ b/notritionVendorsAPP/View/DetailFood.storyboard
@@ -282,11 +282,12 @@
                                 <rect key="frame" x="0.0" y="88" width="375" height="690"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="G3t-gA-d9D">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G3t-gA-d9D">
                                 <rect key="frame" x="0.0" y="778" width="375" height="0.0"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shop Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5jo-KZ-rmm">
                                         <rect key="frame" x="20" y="20" width="335" height="21"/>
+                                        <color key="backgroundColor" red="0.16438572169999999" green="1" blue="0.017140693080000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -296,18 +297,18 @@
                                         <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                         <state key="normal" title="Direction">
-                                            <color key="titleColor" red="0.33103787899999998" green="0.64064604039999995" blue="0.80741077660000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="titleColor" red="0.30196078430000001" green="0.68235294120000001" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
-                                            <action selector="getDirectionPressed:" destination="gCj-2e-Pez" eventType="touchUpInside" id="tuK-tJ-2sC"/>
+                                            <action selector="getDirectionPressed:" destination="gCj-2e-Pez" eventType="touchUpInside" id="hHm-Cb-sFF"/>
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.1062027202" green="0.64605805839999997" blue="0.011073882889999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="qjm-hq-8yu" firstAttribute="top" secondItem="5jo-KZ-rmm" secondAttribute="bottom" constant="20" id="1dS-iA-lRy"/>
+                                    <constraint firstAttribute="height" id="29D-QF-ocU"/>
                                     <constraint firstAttribute="trailing" secondItem="5jo-KZ-rmm" secondAttribute="trailing" constant="20" id="4kx-H4-Lqe"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" id="BbS-ag-Pth"/>
                                     <constraint firstItem="qjm-hq-8yu" firstAttribute="centerX" secondItem="G3t-gA-d9D" secondAttribute="centerX" id="K8i-XS-nzO"/>
                                     <constraint firstItem="5jo-KZ-rmm" firstAttribute="top" secondItem="G3t-gA-d9D" secondAttribute="top" constant="20" id="RgJ-YT-J9G"/>
                                     <constraint firstItem="5jo-KZ-rmm" firstAttribute="leading" secondItem="G3t-gA-d9D" secondAttribute="leading" constant="20" id="qcc-nO-6KS"/>
@@ -327,15 +328,15 @@
                         <viewLayoutGuide key="safeArea" id="VTg-mc-kUB"/>
                     </view>
                     <connections>
-                        <outlet property="direction" destination="qjm-hq-8yu" id="EIs-jo-CGz"/>
-                        <outlet property="mapView" destination="AH1-fr-XuM" id="VOV-tg-2U0"/>
-                        <outlet property="shopInforHeightConstraint" destination="BbS-ag-Pth" id="DZE-EJ-QHy"/>
-                        <outlet property="shopName" destination="5jo-KZ-rmm" id="HNx-7x-bnz"/>
+                        <outlet property="direction" destination="qjm-hq-8yu" id="eYS-qD-SH7"/>
+                        <outlet property="mapView" destination="AH1-fr-XuM" id="wFw-PG-K4A"/>
+                        <outlet property="shopInforHeightConstraint" destination="29D-QF-ocU" id="5TX-Im-LLV"/>
+                        <outlet property="shopName" destination="5jo-KZ-rmm" id="GcL-he-ohv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="akV-dY-dbj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1901.5999999999999" y="982.75862068965523"/>
+            <point key="canvasLocation" x="1882" y="975"/>
         </scene>
         <!--Detail Photo Controller-->
         <scene sceneID="RI5-Q2-LRt">
