--- a/notritionVendorsAPP/Controller/map/view/ShopMarkerView.xib
+++ b/notritionVendorsAPP/Controller/map/view/ShopMarkerView.xib
@@ -10,29 +10,26 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ShopMarkerView" customModule="notritionVendorsAPP" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="73" id="KGk-i7-Jjw">
-            <rect key="frame" x="0.0" y="0.0" width="86" height="73"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM" customClass="CustomImageView" customModule="notritionVendorsAPP" customModuleProvider="target">
-                <rect key="frame" x="0.0" y="0.0" width="86" height="72.5"/>
-                <autoresizingMask key="autoresizingMask"/>
-                <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shop_marker_512" translatesAutoresizingMaskIntoConstraints="NO" id="98w-fm-vEQ">
-                        <rect key="frame" x="0.0" y="0.0" width="86" height="72.5"/>
-                    </imageView>
-                </subviews>
-                <constraints>
-                    <constraint firstItem="98w-fm-vEQ" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="52p-wT-obX"/>
-                    <constraint firstItem="98w-fm-vEQ" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" id="gFu-cz-nTO"/>
-                    <constraint firstItem="98w-fm-vEQ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="q7S-NG-rek"/>
-                    <constraint firstItem="98w-fm-vEQ" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" id="vRJ-sD-Pdj"/>
-                </constraints>
-            </tableViewCellContentView>
-            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="30.399999999999999" y="-9.4452773613193415"/>
-        </tableViewCell>
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shop_marker_512" translatesAutoresizingMaskIntoConstraints="NO" id="dqK-4I-Ykz">
+                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                </imageView>
+            </subviews>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="dqK-4I-Ykz" secondAttribute="bottom" id="9DY-n2-nR2"/>
+                <constraint firstItem="dqK-4I-Ykz" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Q95-cv-slU"/>
+                <constraint firstItem="dqK-4I-Ykz" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="UHd-72-eOs"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="dqK-4I-Ykz" secondAttribute="trailing" id="uvW-lx-Yaf"/>
+            </constraints>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <point key="canvasLocation" x="-234.40000000000001" y="145.27736131934034"/>
+        </view>
     </objects>
     <resources>
         <image name="shop_marker_512" width="512" height="512"/>
