--- a/notritionVendorsAPP/View/DetailFood.storyboard
+++ b/notritionVendorsAPP/View/DetailFood.storyboard
@@ -300,7 +300,7 @@
                                             <color key="titleColor" red="0.30196078430000001" green="0.68235294120000001" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
-                                            <action selector="getDirectionPressed:" destination="gCj-2e-Pez" eventType="touchUpInside" id="hHm-Cb-sFF"/>
+                                            <action selector="getDirectionPressed:" destination="gCj-2e-Pez" eventType="touchUpInside" id="fKc-v9-FU2"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -328,7 +328,6 @@
                         <viewLayoutGuide key="safeArea" id="VTg-mc-kUB"/>
                     </view>
                     <connections>
-                        <outlet property="direction" destination="qjm-hq-8yu" id="eYS-qD-SH7"/>
                         <outlet property="mapView" destination="AH1-fr-XuM" id="wFw-PG-K4A"/>
                         <outlet property="shopInforHeightConstraint" destination="29D-QF-ocU" id="5TX-Im-LLV"/>
                         <outlet property="shopName" destination="5jo-KZ-rmm" id="GcL-he-ohv"/>
