--- a/notritionVendorsAPP/View/Base.lproj/Main.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/Main.storyboard
@@ -53,16 +53,13 @@
                                                             <rect key="frame" x="85" y="0.0" width="319" height="80.666666666666671"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SxT-qT-1Ja">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="319" height="25"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="height" constant="25" id="6uU-bj-ug4"/>
-                                                                    </constraints>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="319" height="40.666666666666664"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ERw-KX-mNu">
-                                                                    <rect key="frame" x="0.0" y="30" width="319" height="15"/>
+                                                                    <rect key="frame" x="0.0" y="45.666666666666664" width="319" height="15"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="15" id="bFR-Dk-z7h"/>
                                                                     </constraints>
@@ -71,7 +68,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z5j-7k-Egp">
-                                                                    <rect key="frame" x="0.0" y="50" width="319" height="15"/>
+                                                                    <rect key="frame" x="0.0" y="65.666666666666671" width="319" height="15"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="15" id="tuE-Nh-Hr9"/>
                                                                     </constraints>
@@ -79,39 +76,11 @@
                                                                     <color key="textColor" red="0.1062027202" green="0.64605805839999997" blue="0.011073882889999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sys-ab-KfO" customClass="CosmosView" customModule="Cosmos">
-                                                                    <rect key="frame" x="0.0" y="70" width="319" height="10.666666666666671"/>
-                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                    <userDefinedRuntimeAttributes>
-                                                                        <userDefinedRuntimeAttribute type="color" keyPath="filledColor">
-                                                                            <color key="value" red="1" green="0.66666666669999997" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                                        </userDefinedRuntimeAttribute>
-                                                                        <userDefinedRuntimeAttribute type="color" keyPath="emptyColor">
-                                                                            <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                        </userDefinedRuntimeAttribute>
-                                                                        <userDefinedRuntimeAttribute type="color" keyPath="emptyBorderColor">
-                                                                            <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                        </userDefinedRuntimeAttribute>
-                                                                        <userDefinedRuntimeAttribute type="color" keyPath="filledBorderColor">
-                                                                            <color key="value" red="1" green="0.66666666669999997" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                                        </userDefinedRuntimeAttribute>
-                                                                        <userDefinedRuntimeAttribute type="color" keyPath="textColor">
-                                                                            <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                        </userDefinedRuntimeAttribute>
-                                                                        <userDefinedRuntimeAttribute type="number" keyPath="starSize">
-                                                                            <real key="value" value="16"/>
-                                                                        </userDefinedRuntimeAttribute>
-                                                                        <userDefinedRuntimeAttribute type="number" keyPath="rating">
-                                                                            <real key="value" value="5"/>
-                                                                        </userDefinedRuntimeAttribute>
-                                                                    </userDefinedRuntimeAttributes>
-                                                                </view>
                                                             </subviews>
                                                             <constraints>
                                                                 <constraint firstItem="ERw-KX-mNu" firstAttribute="width" secondItem="09w-Dn-kha" secondAttribute="width" id="0ll-Y4-CmM"/>
                                                                 <constraint firstItem="SxT-qT-1Ja" firstAttribute="width" secondItem="09w-Dn-kha" secondAttribute="width" id="2dZ-y2-iiu"/>
                                                                 <constraint firstItem="Z5j-7k-Egp" firstAttribute="width" secondItem="09w-Dn-kha" secondAttribute="width" id="idz-ai-BjM"/>
-                                                                <constraint firstItem="sys-ab-KfO" firstAttribute="width" secondItem="09w-Dn-kha" secondAttribute="width" id="vQF-DS-r9I"/>
                                                             </constraints>
                                                         </stackView>
                                                     </subviews>
@@ -129,7 +98,6 @@
                                             <outlet property="shopAddress" destination="ERw-KX-mNu" id="Gc0-e9-7Je"/>
                                             <outlet property="shopImage" destination="Pje-gF-ReK" id="8TR-5p-SB5"/>
                                             <outlet property="shopName" destination="SxT-qT-1Ja" id="LCz-3l-JQ1"/>
-                                            <outlet property="shopRating" destination="sys-ab-KfO" id="Twb-ZB-Ubm"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
